examples/test/testpolicy1479.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1479
  namespace: namespace279
spec:
  podSelector:
    matchLabels:
      key42: value35
      key7: value6
      key21: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value39
          key47: value20
      podSelector:
        matchLabels:
          key7: value13
